<resources>
    <string name="app_name">Calculadora</string>
    <string name="title_calculadora">Calculadora</string>
    <string name="valor1">ingresa un valor</string>
    <string name="valor2">ingresa segundo valor</string>
    <string name="suma">Sumar</string>
    <string name="resta">Restar</string>
    <string name="operacion">Operacion</string>
    <string name="resultado">Resultado</string>
</resources>