<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_number1"
        android:layout_width="293dp"
        android:layout_height="53dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/valor1"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txt_number2"
        android:layout_width="293dp"
        android:layout_height="53dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/valor2"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number2">

        <RadioButton
            android:id="@+id/radioButton_sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:textAlignment="center"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:textAlignment="center"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:onClick="operacion"
        android:text="@string/operacion"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="94dp"
        android:layout_height="28dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="336dp"
        android:layout_height="27dp"
        android:layout_marginTop="28dp"
        android:text="@string/title_calculadora"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>